<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_normal">

    <TextView
        android:id="@+id/title"
        style="@style/Text.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/apply_sort_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <RadioButton
            android:id="@+id/sort_position_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_position" />

        <RadioButton
            android:id="@+id/sort_position_inverted_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_position_inverted" />

        <RadioButton
            android:id="@+id/sort_alphabetic_asc_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_alphabetic_ascending" />

        <RadioButton
            android:id="@+id/sort_alphabetic_desc_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_alphabetic_descending" />

        <RadioButton
            android:id="@+id/sort_occurrences_asc_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_occurrences_ascending" />

        <RadioButton
            android:id="@+id/sort_occurrences_desc_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_occurrences_descending" />

    </RadioGroup>

    <Button
        android:id="@+id/done_button"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_button_group" />

</androidx.constraintlayout.widget.ConstraintLayout>